# Web3ResearchAgent

./: .env.example  .gitignore  PROJECT_STATE.md  README.md  debug_documentation.py  debug_team.py  docker-compose.yml  test_llm.py
bot/: Dockerfile  alembic.ini  debug_twitter.py  pyproject.toml
bot/alembic/: env.py
bot/alembic/versions/: 0001_initial_schema.py
bot/src/: config.py  main.py
bot/src/agents/: aggregator.py  analyst.py  cross_check.py  documentation.py  graph.py  orchestrator.py  resolve_urls.py  social.py  state.py  team.py
bot/src/bot/: i18n.py  keyboards.py  middlewares.py
bot/src/bot/handlers/: analyze.py  portfolio.py  start.py
bot/src/db/: __init__.py  engine.py  models.py  repositories.py
bot/src/schemas/: __init__.py  agent_state.py  project.py
bot/src/services/: apify_search.py  cache.py  coingecko.py  cryptorank.py  llm.py  scraper.py  search.py  twitter.py
bot/tests/: conftest.py
bot/tests/test_agents/: test_aggregator.py  test_analyst.py  test_cross_check.py  test_dispatcher.py  test_documentation.py
bot/tests/test_bot/: test_analyze_callbacks.py
bot/tests/test_services/: test_coingecko.py  test_llm.py  test_scraper.py
mini-app/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
mini-app/src/: App.tsx  i18n.ts
mini-app/src/api/: client.ts
mini-app/src/components/: DocumentationAnalysis.tsx  FundsList.tsx  ProjectCard.tsx  ProjectLinks.tsx  RiskFlags.tsx  ScoreGauge.tsx  SocialAnalysis.tsx  TeamVerification.tsx  TokenDistribution.tsx  VestingChart.tsx
mini-app/src/hooks/: useTelegram.ts
(+2 files in other folders)
